// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api/3.x/canvas/descriptive Canvas: Complete Canvas getLabel: getLabel Complete Canvas 1`] = `
Object {
  "en": Array [
    "Canvas 1",
  ],
}
`;

exports[`api/3.x/canvas/descriptive Canvas: Complete Canvas getMetadata: getMetadata Complete Canvas 1`] = `
Array [
  Object {
    "label": Object {
      "en": Array [
        "Author",
      ],
    },
    "value": Object {
      "@none": Array [
        "Anne Author",
      ],
    },
  },
  Object {
    "label": Object {
      "en": Array [
        "Published",
      ],
    },
    "value": Object {
      "en": Array [
        "Paris, circa 1400",
      ],
      "fr": Array [
        "Paris, environ 1400",
      ],
    },
  },
  Object {
    "label": Object {
      "en": Array [
        "Notes",
      ],
    },
    "value": Object {
      "en": Array [
        "Text of note 1",
        "Text of note 2",
      ],
    },
  },
  Object {
    "label": Object {
      "en": Array [
        "Source",
      ],
    },
    "value": Object {
      "@none": Array [
        "<span>From: <a href=\\"https://example.org/db/1.html\\">Some Collection</a></span>",
      ],
    },
  },
]
`;

exports[`api/3.x/canvas/descriptive Canvas: Complete Canvas getNavDate: getNavDate Complete Canvas 1`] = `"300-01-01T00:00:00Z"`;

exports[`api/3.x/canvas/descriptive Canvas: Complete Canvas getPosterCanvas: getPosterCanvas Complete Canvas 1`] = `
Object {
  "height": 1400,
  "id": "https://example.org/iiif/1/canvas/poster",
  "type": "Canvas",
  "width": 1200,
}
`;

exports[`api/3.x/canvas/descriptive Canvas: Complete Canvas getPosterCanvasId: getPosterCanvasId Complete Canvas 1`] = `"https://example.org/iiif/1/canvas/poster"`;

exports[`api/3.x/canvas/descriptive Canvas: Complete Canvas getRequiredStatement: getRequiredStatement Complete Canvas 1`] = `
Object {
  "label": Object {
    "en": Array [
      "Attribution",
    ],
  },
  "value": Object {
    "en": Array [
      "Provided by Example Organization",
    ],
  },
}
`;

exports[`api/3.x/canvas/descriptive Canvas: Complete Canvas getRights: getRights Complete Canvas 1`] = `"https://creativecommons.org/licenses/by/4.0/"`;

exports[`api/3.x/canvas/descriptive Canvas: Complete Canvas getSummary: getSummary Complete Canvas 1`] = `
Object {
  "en": Array [
    "Book 1, written be Anne Author, published in Paris around 1400.",
  ],
}
`;

exports[`api/3.x/canvas/descriptive Canvas: Complete Canvas getThumbnail: getThumbnail Complete Canvas 1`] = `
Object {
  "id": "https://example.org/images/book1-page1/full/80,100/0/default.jpg",
  "service": Array [
    "https://example.org/images/book1-page1",
  ],
  "type": "Image",
}
`;

exports[`api/3.x/canvas/descriptive Canvas: Complete Canvas getThumbnailId: getThumbnailId Complete Canvas 1`] = `"https://example.org/images/book1-page1/full/80,100/0/default.jpg"`;

exports[`api/3.x/canvas/descriptive Canvas: Minimal Canvas getLabel: getLabel Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/descriptive Canvas: Minimal Canvas getMetadata: getMetadata Minimal Canvas 1`] = `Array []`;

exports[`api/3.x/canvas/descriptive Canvas: Minimal Canvas getNavDate: getNavDate Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/descriptive Canvas: Minimal Canvas getPosterCanvas: getPosterCanvas Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/descriptive Canvas: Minimal Canvas getPosterCanvasId: getPosterCanvasId Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/descriptive Canvas: Minimal Canvas getRequiredStatement: getRequiredStatement Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/descriptive Canvas: Minimal Canvas getRights: getRights Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/descriptive Canvas: Minimal Canvas getSummary: getSummary Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/descriptive Canvas: Minimal Canvas getThumbnail: getThumbnail Minimal Canvas 1`] = `null`;

exports[`api/3.x/canvas/descriptive Canvas: Minimal Canvas getThumbnailId: getThumbnailId Minimal Canvas 1`] = `null`;
